--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "feather-icons": "^4.29.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-icons": "^4.7.1",
